--- a/internal/docs/apis/input/server/gateway_api.yaml
+++ b/internal/docs/apis/input/server/gateway_api.yaml
@@ -1,6 +1,7 @@
-openapi: 3.1.0
+openapi: 3.0.3
 info:
   title: Gateway API
+  description: Gateway API which client applications access, and which places the requests on Queues to be consumed by other services 
   version: 0.0.0
 servers:
   - url: http://{url}:{port}/
@@ -11,9 +12,15 @@ servers:
         description: Gateway API's URL
       port:
         # This should reference a config file (which the server's go code should also reference)
-        default: 10000
+        default: '10000'
 components:
   responses:
+    Conflict:
+        description: Conflict
+    NoContent:
+        description: No Content
+    NotAcceptable:
+        description: Not Acceptable
     BadRequest:
         description: Bad Request
     Unauthorized:
@@ -28,6 +35,7 @@ paths:
   /v1/users:
     post:
       summary: Creates a new user
+      operationId: createUser
       requestBody:
         required: true
         content:
@@ -68,6 +76,7 @@ paths:
   /v1/users/{username}:
     get:
       summary: Gets user info
+      operationId: getUser
       parameters:
         - name: username
           in: path
@@ -98,6 +107,7 @@ paths:
 
     patch:
       summary: Updates a user
+      operationId: updateUser
       parameters:
         - name: username
           in: path
@@ -145,6 +155,7 @@ paths:
 
     delete:
       summary: Deletes a user
+      operationId: deleteUser
       parameters:
         - name: username
           in: path
@@ -174,9 +185,16 @@ paths:
         '422':
           $ref: '#/components/responses/UnprocessableEntity'
 
-  /v1/users/sessions:
+  /v1/users/sessions/{username}:
     post:
       summary: Starts a user session
+      operationId: createSession
+      parameters:
+      - name: username
+        in: path
+        required: true
+        schema:
+          type: string
       requestBody:
         required: true
         content:
@@ -204,9 +222,10 @@ paths:
                     properties:
                       self:
                         type: string
-                        example: '/v1/users/sessions/foo'
+                        example: '/v1/users/sessions/username'
     delete:
       summary: Terminates session
+      operationId: terminateSession
       parameters:
         - in: path
           name: username
